# starfish

./: CLAUDE.md  Cargo.toml  Justfile  version.json5
msgs/: admin.geno
scripts/: create-db.fish  create-db.sh  starfish-schema.sql
sf_admin_msg/: Cargo.toml
sf_admin_msg/src/: lib.rs  msgs.rs
starfish_admin/: Cargo.toml
starfish_admin/src/: main.rs  starfish_admin.rs
starfish_agent/: Cargo.toml
starfishd/: Cargo.toml
starfishd/src/: config_file.rs  main.rs  server.rs  server_args.rs  server_config.rs  starfishd.rs
