[package]
name = "starfish_admin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-nats = "0.49.1"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.10"
futures-util = "0.3.32"
log = { version = "0.4.32", features = ["serde"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
url = { version = "2.5.8", features = ["serde"] }
sf_admin_msg = { path = "../sf_admin_msg" }
rmp-serde = "1.3.1"
tokio-util = "0.7.18"

[[bin]]
name = "starfish-admin"
path = "src/main.rs"
