[package]
name = "starfishd"
version = "0.1.0"
edition = "2024"
authors = ["John Lyon-Smith <john@escapegallery.net>"]
repository = "https://github.com/jlyonsmith/starfish"
description = "Starfish user management server"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.10"
lazy_static = "1.5.0"
log = { version = "0.4.32", features = ["serde"] }
serde = "1.0.228"
single-instance = "0.3.3"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
toml = "1.1.2"
url = { version = "2.5.8", features = ["serde"] }
sf_admin_msg = { path = "../sf_admin_msg" }
async-nats = "0.49.1"
rmp-serde = "1.3.1"
tokio-postgres = "0.7.18"
tokio-util = "0.7.18"

[[bin]]
name = "starfishd"
path = "src/main.rs"
